--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/e6b8371d90.js" crossorigin="anonymous"></script>
     <!-- Favicon -->
-    <link rel="shortcut icon" href="assets/fabicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="fabicon.png" type="image/x-icon">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:wght@400;500;600&display=swap"
         rel="stylesheet">
@@ -21,8 +21,8 @@
     <!-- Header section -->
     <section id="header">
         <div class="nav-bar">
-            <img src="assets/logo.png" alt="logo" class="logo">
-            <img src="assets/menu.png" alt="menu" class="menu" onclick="openmenu()">
+            <img src="logo.png" alt="logo" class="logo">
+            <img src="menu.png" alt="menu" class="menu" onclick="openmenu()">
         </div>
 
         <nav>
@@ -32,7 +32,7 @@
                 <li><a href="#">SERVICIOS</a></li>
                 <li><a href="#">CONTACTO</a></li>
 
-                <img src="assets/close.png" alt="close" class="close" onclick="closemenu()">
+                <img src="close.png" alt="close" class="close" onclick="closemenu()">
             </ul>
         </nav>
 
@@ -40,7 +40,7 @@
             <h1>Castellanos Barber Shop</h1>
             <p></p>
             <div class="header-btn">
-                <a href="#"><span></span>AGENDA TU CITA</a>
+                <a href=""><span></span>AGENDA TU CITA</a>
             </div>
         </div>
     </section>
@@ -72,7 +72,7 @@
                 </div>
             </div>
             <div class="feature-img">
-                <img src="assets/barber-man.jpg" alt="barber-man">
+                <img src="barber-man.jpg" alt="barber-man">
             </div>
         </div>
     </section>
@@ -86,7 +86,7 @@
 
         <div class="services-content">
             <div class="service">
-                <img src="assets/pic-1.jpg" alt="pic-1">
+                <img src="pic-1.jpg" alt="pic-1">
                 <div class="overlay">
                     <div class="overlay-content">
                         <h3>PEINADO DE CABELLO</h3>
@@ -95,7 +95,7 @@
                 </div>
             </div>
             <div class="service">
-                <img src="assets/pic-2.jpg" alt="pic-2">
+                <img src="pic-2.jpg" alt="pic-2">
                 <div class="overlay">
                     <div class="overlay-content">
                         <h3>RECORTE DE BARBA</h3>
@@ -104,7 +104,7 @@
                 </div>
             </div>
             <div class="service">
-                <img src="assets/pic-3.jpg" alt="pic-3">
+                <img src="pic-3.jpg" alt="pic-3">
                 <div class="overlay">
                     <div class="overlay-content">
                         <h3>CORTE DE PELO</h3>
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="service">
-                <img src="assets/pic-4.jpg" alt="pic-4">
+                <img src="pic-4.jpg" alt="pic-4">
                 <div class="overlay">
                     <div class="overlay-content">
                         <h3>SHAMPOO SECO</h3>
@@ -126,7 +126,7 @@
     </section>
     <!-- Footer Section -->
     <section id="footer">
-        <img src="assets/footer-img.png" alt="footer-img" class="footer-img">
+        <img src="footer-img.png" alt="footer-img" class="footer-img">
         <div class="title-text">
             <p>CONTACTO</p>
             <h2>VISITANOS HOY</h2>
