--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1>Castellanos Barber Shop</h1>
             <p></p>
             <div class="header-btn">
-                <a href=""><span></span>AGENDA TU CITA</a>
+                <a href="hansellcastellanoshernandez50@gmail.com"><span></span>AGENDA TU CITA</a>
             </div>
         </div>
     </section>
