--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h1>Castellanos Barber Shop</h1>
             <p></p>
             <div class="header-btn">
-                <a href="hansellcastellanoshernandez50@gmail.com"><span></span>AGENDA TU CITA</a>
+                <a href="mailto:hansellcastellanoshernandez50@gmail.com?subject=agendar%20cita%20&body=Hola,%20Pedro%20A.%20Quisiera%20agendar%20una%20cita,%20%C2%BFme%20podrias%20decir%20que%20dia%20y%20hora%20puedes?."><span></span>AGENDA TU CITA</a>
             </div>
         </div>
     </section>
